# cash-app-clone

./: README.md
cash-app/: package.json
cash-app/anchor/: Anchor.toml  Cargo.toml  package.json  project.json
cash-app/anchor/cash-app/src/: Cargo.toml  lib.rs
cash-app/src/cash-app-program/idl/: cash_app.json
cash-app/src/cash-app-program/types/: cash_app.ts
cash-app/src/components/account/: account-data-access.tsx  account-detail-feature.tsx  account-ui.tsx  activity-feature.tsx  add-friend-ui.tsx  program-data-access.tsx
cash-app/src/components/anchor-program/: deposit-feature.tsx  deposit-ui.tsx  init-ui.tsx  int-feature.tsx  transfer-ui.tsx  withdraw-ui.tsx
cash-app/src/components/cluster/: cluster-ui.tsx
cash-app/src/components/sign-in/: sign-in-ui.tsx
cash-app/src/components/sns/: sns-feature.tsx  sns-ui.tsx
cash-app/src/components/solana-pay/: solana-pay-ui.tsx
cash-app/src/components/ui/: app-modal.tsx
cash-app/src/navigators/: AppNavigator.tsx  HomeNavigator.tsx
cash-app/src/screens/: ActivityScreen.tsx  HomeScreen copy.tsx  InputScreen.tsx  PayScreen.tsx  ReceiveScreen.tsx  ScanScreen.tsx  SendScreen.tsx  index copy.ts
cash-app/src/utils/: useAnchorWallet.tsx  useCashAppProgram.tsx
