[package]
name = "cash-app"
version = "0.1.0"
description = "Solana on-chain cash app"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cash_app"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "=1.18.12"

